Media queries fixed so bear doesnt overlap anything, input form added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,11 +120,16 @@
 
 	.herocontainer {
 		position: relative;
+		height: 500px;
+	}
+
+	#player-nav {
+		position: absolute;
+		bottom: 10px;
 	}
 
 	.bearhead img {
 		position: absolute;
-		z-index: 4;
 		width: 320px;
 		left: 0px;
 	}
@@ -133,13 +138,11 @@
 		position: absolute;
 		top: 149px;
 		width: 320px;
-		z-index: 1;
 	}
 
 	.weapon img {
 		position: absolute;
 		top: 0px;
-		z-index: 3;
 		width: 320px;
 	}
 
@@ -219,6 +222,10 @@
 
 		.container {
 			width: 960px;
+		}
+
+		.herocontainer {
+			height: 700px;
 		}
 
 	}
@@ -2240,10 +2247,6 @@
 
 		/* HERO */
 
-			.herocontainer {
-				position: relative;
-			}
-
 			.bearhead img {
 				position: absolute;
 				z-index: 2;
@@ -2689,5 +2692,13 @@
 				#copyright .links {
 					padding: 0.75em 1.25em 0.75em 1.25em;
 				}
+
+	}
+
+	@media screen and (min-width: 1201px) {
+
+		.herocontainer {
+			height: 865px;
+		}
 
 	}
